Fix lots of small issues
- COMMONS/SEGMENT: Overrided faulty styling which added extra border-top on Segments
- ADMIN/MESSAGE: In users list, change the toggle into a normal checkbox. This way, it won't break on small screens
- ADMIN/MESSAGE: Change position of the "send message" button to be directly above the checkboxes
- ADMIN/DESTINATIONS: Fixed broken active/inactive filter
- ADMIN/DESTINATIONS/EDIT: Fixed a collapsed container bug
- ADMIN/USERS: Removed `DateInterval`
- ADMIN/TRIPS: Add a status filter. Changed the filter color pallette
- TRIPS/SIGNUP: Made the "fill out more info about yourself" section a bit prettier

--- a/src/styles/base/base.scss
+++ b/src/styles/base/base.scss
@@ -126,6 +126,10 @@ body {
   color: #ccc !important;
 }
 
+.ui.segments > .segment {
+  border-top: none;
+}
+
 //------------------------------------------------
 //	SHAME, SHAME, SHAME
 // -----------------------------------------------
